<resources>
    <string name="app_name">PhoneBookApp</string>
    <string name="input_number_here">Input number here</string>
    <string name="input_name_here">Input name here</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="add_contact">Add contact</string>
    <string name="call_or_text_message">Do you want to call or text message?</string>
    <string name="call_opt">Call</string>
    <string name="message_opt">Message</string>
</resources>
